--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.3.0'
 
     compile 'com.github.bumptech.glide:glide:3.6.0'
+//listView和ScrollView的联动
+    compile 'me.everything:overscroll-decor-android:1.0.3'
 }
 
 repositories {
