--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,6 +86,9 @@
         <activity
             android:name=".ui.CollapsingtoolbarActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".ui.ToolBarActivity"
+           ></activity>
         <activity android:name=".ui.RxBindingActivity"></activity>
         <activity
             android:name=".ui.CoordinatorLayoutActivity"
