--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.0'
 //listView和ScrollView的联动
     compile 'me.everything:overscroll-decor-android:1.0.3'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
 
 repositories {
