--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,6 +84,7 @@
         <activity android:name=".ui.TableActivity"></activity>
         <activity android:name=".ui.HListViewActivity"></activity>
         <activity android:name=".ui.EventBusActivity"></activity>
+        <activity android:name=".ui.StickyActivity"></activity>
         <activity
             android:name=".ui.CollapsingtoolbarActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
